@@ -1784,6 +1784,30 @@ def test_zmo_teaser_kicker_should_contain_logo(testbrowser):
     assert len(teaser_kicker_zmo_parquet) == 0
 
 
+def test_zmo_teaser_kicker_should_have_zmo_modifier(testbrowser):
+    browser = testbrowser('/zeit-online/journalistic-formats-zmo')
+
+    teaser_fullwidth_kicker = browser.cssselect(
+        '.teaser-fullwidth__kicker--zmo')
+    teaser_classic_kicker = browser.cssselect(
+        '.teaser-classic__kicker--zmo')
+    teaser_large_kicker = browser.cssselect(
+        '.teaser-large__kicker--zmo')
+    teaser_small_kicker = browser.cssselect(
+        '.teaser-small__kicker--zmo')
+    teaser_small_minor_kicker = browser.cssselect(
+        '.teaser-small-minor__kicker--zmo')
+    teaser_parquet_kicker = browser.cssselect(
+        '.teaser-small__kicker--zmo-parquet.teaser-small__kicker--zmo')
+
+    assert len(teaser_fullwidth_kicker) == 1
+    assert len(teaser_classic_kicker) == 1
+    assert len(teaser_large_kicker) == 2
+    assert len(teaser_small_kicker) == 4
+    assert len(teaser_small_minor_kicker) == 2
+    assert len(teaser_parquet_kicker) == 0
+
+
 def test_longform_should_not_contain_logo_in_kicker(testbrowser):
     browser = testbrowser('/zeit-online/journalistic-formats-zmo')
 
@@ -1814,6 +1838,30 @@ def test_zett_teaser_kicker_should_contain_logo(testbrowser):
     assert len(teaser_small_logo) == 1
     assert len(teaser_small_minor_logo) == 1
     assert len(teaser_square_logo) == 1
+
+
+def test_zett_teaser_kicker_should_have_zett_modifier(testbrowser, testserver):
+    browser = testbrowser('/zeit-online/journalistic-formats-zett')
+
+    teaser_fullwidth_kicker = browser.cssselect(
+        '.teaser-fullwidth__kicker--zett')
+    teaser_classic_kicker = browser.cssselect(
+        '.teaser-classic__kicker--zett')
+    teaser_large_kicker = browser.cssselect(
+        '.teaser-large__kicker--zett')
+    teaser_small_kicker = browser.cssselect(
+        '.teaser-small__kicker--zett')
+    teaser_small_minor_kicker = browser.cssselect(
+        '.teaser-small-minor__kicker--zett')
+    teaser_square_kicker = browser.cssselect(
+        '.teaser-square__kicker--zett')
+
+    assert len(teaser_fullwidth_kicker) == 1
+    assert len(teaser_classic_kicker) == 1
+    assert len(teaser_large_kicker) == 2
+    assert len(teaser_small_kicker) == 4
+    assert len(teaser_small_minor_kicker) == 2
+    assert len(teaser_square_kicker) == 2
 
 
 def test_printkiosk_is_structured_correctly(testbrowser):
